create: styles for header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </a>
 
 
-      <form action="#" class="search">
+      <form action="#" class="search header__search">
         <input type="text" class="search__input" placeholder="Search Location">
         <button class="search__button">
           <img src="img/search.png" alt="icon: search">
