fixed: margin and padding in hotel and header

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
           <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
           <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
+          <li class="navbar-menu__item__item-mr0"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
         </ul>
         <!-- /.navbar-menu -->
       </div>
@@ -86,11 +86,11 @@
         <div class="hotel-info__text">
           <div class="hotel-wrapper">
             <div class="stars">
-              <img src="img/star.svg" alt="star">
-              <img src="img/star.svg" alt="star">
-              <img src="img/star.svg" alt="star">
-              <img src="img/star.svg" alt="star">
-              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star" class="stars__icon">
+              <img src="img/star.svg" alt="star" class="stars__icon">
+              <img src="img/star.svg" alt="star" class="stars__icon">
+              <img src="img/star.svg" alt="star" class="stars__icon">
+              <img src="img/star.svg" alt="star" class="stars__icon">
             </div>
             <h1 class="hotel-name hotel-info__name">GRAND HILTON HOTEL</h1>
             <span class="offer hotel-info__offer">Flash Offer</span>
