--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Best Tour Plan - Hotel Booking</title>
 </head>
@@ -106,8 +107,34 @@
         </div>
         <!-- /.hotel-info__rating -->
       </div>
+      <!-- hotel-info -->
+      <div class="hotel-grid">
+        <div class="slider">
+                <!-- Slider main container -->
+              <div class="swiper">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                  <!-- Slides -->
+                  <div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
+                  <div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
+                  <div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
+                        ...
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <button class="slider-button slider-button--prev"></button>
+                <button class="slider-button slider-button--next"></button>
+
+              </div>
+              <!-- swiper -->
+        </div>
+        <!-- /.slider -->
+      </div>
+      <!-- /.hotel-grid -->
     </div>
     <!-- /.container -->
   </section>
+  <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
