--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
       </div>
       <!-- hotel-info -->
       <div class="hotel-grid">
-        <div class="slider">
+        <div class="slider hotel__slider">
                 <!-- Slider main container -->
               <div class="swiper">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                   <!-- Slides -->
-                  <div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
-                  <div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
-                  <div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
+                  <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
+                  <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
+                  <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
                         ...
                 </div>
 
@@ -167,7 +167,7 @@
           <!-- /.booking -->
           <div class="map"><iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3276.027249650988!2d98.29756722547508!3d7.8382258729429894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305025650c33dbab%3A0xa67a542329d011e1!2z0J_RhdGD0LrQtdGCLCDQmtCw0YDQvtC9LCDQntGC0LXQu9GMINCl0LjQu9GC0L7QvQ!5e0!3m2!1sru!2sru!4v1637664041305!5m2!1sru!2sru"
-            width="347" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+            width="100%" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
           <!-- /.map -->
         </div>
       </div>
