--- a/index.html
+++ b/index.html
@@ -112,26 +112,23 @@
       </div>
       <!-- hotel-info -->
       <div class="hotel-grid">
-        <div class="slider hotel__slider">
                 <!-- Slider main container -->
-              <div class="swiper">
+              <div class="swiper hotel-slider hotel__slider">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                   <!-- Slides -->
-                  <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
-                  <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
-                  <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
-                        ...
+                  <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
+                  <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
+                  <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
+                        
                 </div>
 
                 <!-- If we need navigation buttons -->
-                <button class="slider-button slider-button--prev"></button>
-                <button class="slider-button slider-button--next"></button>
+                <button class="hotel-slider__button hotel-slider__button--prev"></button>
+                <button class="hotel-slider__button hotel-slider__button--next"></button>
 
               </div>
               <!-- swiper -->
-        </div>
-        <!-- /.slider -->
         <div class="hotel-right">
           <div class="booking">
             <div class="booking__info">
@@ -193,6 +190,103 @@
     <!-- /.newsletter-wrapper -->
   </section>
   <!-- /.newsletter -->
+  <section class="reviews">
+    <div class="container">
+      <h2 class="reviews__title">What people think about us</h2>
+      <div class="swiper reviews-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar.jpg" alt="Megan Fox" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Megan Fox</h3>
+                <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only
+                that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which
+                were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per
+                atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it
+                was a good experience and could recommend.
+              </p>
+              <!-- /.reviews-slider__text -->
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar-2.jpg" alt="Megan Fox" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Bred Pitt</h3>
+                <span class="reviews-slider__date">Stayed 1 Jun, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta enim sit tempore voluptates aliquid nobis. Aperiam, iste, commodi sint temporibus debitis illum quis numquam reiciendis omnis quasi vitae? Fugit, quas!
+                At illum distinctio quibusdam nemo praesentium delectus similique earum eligendi eius aliquam aliquid tempore nulla, quos aspernatur dolorum. Tenetur quos mollitia nihil fugiat adipisci aliquid, quia temporibus et quo porro!
+                Fuga cupiditate tempora iure quae rem corrupti harum, earum fugiat? Aliquam laudantium sunt totam. Maxime tempore ab deserunt minima laudantium eos earum iste repellendus neque animi obcaecati reprehenderit, officiis doloremque.
+              </p>
+              <!-- /.reviews-slider__text -->
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar-3.jpg" alt="Megan Fox" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Leonardo DiCaprio</h3>
+                <span class="reviews-slider__date">Stayed 8 Dec, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                  <img src="img/star.svg" alt="star" class="stars__icon">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi tempore, ad fuga quasi voluptatem qui dignissimos dolorum sequi dolor veniam? Sequi qui officia aut reiciendis veritatis laudantium incidunt esse non.
+                Deleniti ipsa non dignissimos distinctio numquam eius ipsam, eum, id, odit corporis velit atque ea dolores molestiae animi reiciendis debitis sequi placeat? Expedita facere culpa molestias illo totam tenetur quaerat.
+                Numquam quas corporis, exercitationem eligendi reprehenderit voluptate quia repellat dicta, iure fuga velit eveniet perferendis aut aliquam omnis deserunt est architecto asperiores, perspiciatis vel repellendus. Blanditiis dolores consequatur rerum nihil?
+              </p>
+              <!-- /.reviews-slider__text -->
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+        </div>
+        <!-- /.swiper-wrapper -->
+  
+        <button class="reviews-slider__button reviews-slider__button--prev"></button>
+        <button class="reviews-slider__button reviews-slider__button--next"></button>
+      
+      </div>
+      <!-- /.reviews-slider -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.reviews -->
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
