--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>Best Tour Plan - Hotel Booking</title>
 </head>
 <body>
-  <header class="navbar">
+  <header class="navbar navbar--mobile_fixed">
     <div class="container">
       <div class="navbar-top">
         <a href="#" class="logo">
@@ -27,14 +27,14 @@
       </a>
 
 
-      <form action="#" class="search navbar__search">
+      <form action="#" class="search navbar__search navbar__search--mobile_hidden">
         <input type="text" class="search__input" placeholder="Search Location">
         <button class="search__button">
           <img src="img/search.svg" alt="icon: search">
         </button>
       </form>
 
-      <a href="#" class="user navbar__user">
+      <a href="#" class="user navbar__user navbar__user--mobile_hidden">
         <img src="img/user-avatar.jfif" alt="avatar: Nathan" class="user__avatar">
         <span class="user__name">Nathan</span>
       </a>
@@ -53,6 +53,18 @@
     <div class="navbar-bottom">
       <div class="container">
         <ul class="navbar-menu">
+          <li class="navbar-menu__item navbar-menu__item--mobile_visible">
+            <a href="#" class="user navbar__user navbar__user--mobile_visible">
+            <img src="img/user-avatar.jfif" alt="avatar: Nathan" class="user__avatar">
+            <span class="user__name user__name--light">Nathan</span>
+          </a>
+        </li>
+          <li class="navbar-menu__item navbar-menu__item--mobile_visible"><form action="#" class="search navbar__search navbar__search--mobile_visible">
+            <input type="text" class="search__input" placeholder="Search Location">
+            <button class="search__button">
+              <img src="img/search.svg" alt="icon: search">
+            </button>
+          </form></li>
           <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
           <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
           <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
@@ -303,7 +315,7 @@
         <!-- /.card -->
         <div class="card activities__card">
           <img src="img/activity-3.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
-          <h3 class="card__title__text"> Tamarind falls hiking trip - full day</h3>
+          <h3 class="card__title"> Tamarind falls hiking trip&nbsp;-&nbsp;full day</h3>
           <button class="card__button">Book Now</button>
         </div>
         <!-- /.card -->
